tests/ui/errors/snapshots/parse_top_level_var_with_initializer.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:7:1]
 6 │ 
 7 │ var conf = Config {
   · ─┬─
   ·  ╰── not allowed
 8 │   gravity: 0.03,
   ╰────
  help: Use `const` for a primitive, or a function that returns the value e.g. `fn origin() -> Point { ... }` for a composite · code: [parse.var_not_allowed]
